examples/reference/index_out_of_bounds_error.err
Assembly failed:
2: ERROR [asm401]
    2 | .byte {1, 2}[3]
      ^
ERROR: Index out of bounds
